0.2 (unreleased)
----------------

0.1 (2009-07-22)
----------------

 * Initial import and creation derived from getpaid.SalesforcePloneFormGenAdapter
