@@ -1,5 +1,7 @@
 0.2 (unreleased)
 ----------------
+ * Do not send mapped None values to salesforce
+ * Expand exception handling since beatbox raises strings.
 
 0.1 (2009-07-22)
 ----------------
